--- a/package.json
+++ b/package.json
@@ -2,7 +2,14 @@
   "name": "json2csv",
   "version": "6.0.0",
   "description": "Convert JSON to CSV",
-  "keywords": [ "json", "to", "csv", "export", "convert", "parse"],
+  "keywords": [
+    "json",
+    "to",
+    "csv",
+    "export",
+    "convert",
+    "parse"
+  ],
   "author": {
     "name": "Juanjo Díaz",
     "email": "juanjo.diazmo@gmail.com"
@@ -20,6 +27,7 @@
   },
   "homepage": "http://juanjodiaz.github.io/json2csv",
   "scripts": {
+    "docs:preview": "docsify serve docs",
     "lint": "npm run lint -ws",
     "lint:fix": "npm run lint -- --fix",
     "test": "npm run test:raw -w @json2csv/cli -w @json2csv/parsers -w @json2csv/node -w @json2csv/whatwg | tap-spec",
@@ -29,6 +37,7 @@
     "@babel/eslint-parser": "^7.18.2",
     "@babel/plugin-syntax-import-assertions": "^7.17.12",
     "c8": "^7.11.3",
+    "docsify-cli": "^4.4.4",
     "eslint": "^8.17.0",
     "tap-spec": "^5.0.0",
     "tape": "^5.2.2"
