--- a/packages/cli/.eslintrc
+++ b/packages/cli/.eslintrc
@@ -1,5 +1,10 @@
 {
   "env": {
     "node": true
+  },
+  "rules": {
+    "prettier/prettier": ["warn", {
+      "endOfLine": "auto"
+    }]
   }
 }
