docs: consolidate docs and package.json for all packages

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -17,12 +17,15 @@
     "type": "git",
     "url": "git+https://github.com/juanjoDiaz/json2csv.git"
   },
-  "author": "Juanjo Díaz",
+  "author": {
+    "name": "Juanjo Díaz",
+    "email": "juanjo.diazmo@gmail.com"
+  },
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/juanjoDiaz/json2csv/issues"
   },
-  "homepage": "https://github.com/juanjoDiaz/json2csv#readme",
+  "homepage": "http://juanjodiaz.github.io/json2csv",
   "dependencies": {
     "commander": "^9.3.0"
   }
