--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "json2csv",
   "version": "6.0.0",
-  "description": "Convert JSON to CSV",
+  "description": "Fast and highly configurable JSON to CSV converter",
   "keywords": [
     "json",
     "to",
@@ -15,6 +15,7 @@
     "email": "juanjo.diazmo@gmail.com"
   },
   "license": "MIT",
+  "private": true,
   "repository": {
     "type": "git",
     "url": "https://github.com/juanjodiaz/json2csv"
