--- a/packages/parsers/package.json
+++ b/packages/parsers/package.json
@@ -13,18 +13,21 @@
     "lint": "eslint src test",
     "test:raw": "node test",
     "test": "npm run test:raw | tap-spec",
-    "test-with-coverage": "c8 --reporter=text --reporter=lcov npm test"
+    "test-with-coverage": "c8 --reporter=text npm test"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/juanjoDiaz/json2csv.git"
   },
-  "author": "Juanjo Díaz",
+  "author": {
+    "name": "Juanjo Díaz",
+    "email": "juanjo.diazmo@gmail.com"
+  },
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/juanjoDiaz/json2csv/issues"
   },
-  "homepage": "https://github.com/juanjoDiaz/json2csv#readme",
+  "homepage": "http://juanjodiaz.github.io/json2csv",
   "dependencies": {
     "@streamparser/json": "^0.0.7",
     "lodash.get": "^4.4.2"
