--- a/packages/transforms/package.json
+++ b/packages/transforms/package.json
@@ -1,11 +1,10 @@
 {
   "name": "@json2csv/transforms",
   "version": "6.0.0",
-  "description": "Built-in transforms. A transform is a function that receives a data recod and returns a transformed record. Transforms are executed in order before converting the data record into a CSV row.",
+  "description": "json2csv built-in transforms. A transform is a function that receives a data recod and returns a transformed record. Transforms are executed in order before converting the data record into a CSV row.",
   "keywords": [ "json", "to", "csv", "export", "convert", "parse"],
   "type": "module",
   "main": "src/index.js",
-  "module": "esm/index.esm.js",
   "exports": {
     "./*": "./src/*.js",
     ".": "./src/index.js"
@@ -18,12 +17,15 @@
     "type": "git",
     "url": "git+https://github.com/juanjoDiaz/json2csv.git"
   },
-  "author": "Juanjo Díaz",
+  "author": {
+    "name": "Juanjo Díaz",
+    "email": "juanjo.diazmo@gmail.com"
+  },
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/juanjoDiaz/json2csv/issues"
   },
-  "homepage": "https://github.com/juanjoDiaz/json2csv#readme",
+  "homepage": "http://juanjodiaz.github.io/json2csv",
   "dependencies": {
     "lodash.get": "^4.4.2"
   }
