--- a/packages/whatwg/package.json
+++ b/packages/whatwg/package.json
@@ -5,20 +5,27 @@
   "keywords": [ "json", "to", "csv", "export", "convert", "parse"],
   "type": "module",
   "main": "src/index.js",
+  "exports": {
+    "./*": "./src/*.js",
+    ".": "./src/index.js"
+  },
   "scripts": {
     "lint": "eslint src test",
     "test:raw": "node test",
     "test": "npm run test:raw | tap-spec",
-    "test-with-coverage": "c8 --reporter=text --reporter=lcov npm test"
+    "test-with-coverage": "c8 --reporter=text npm test"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/juanjoDiaz/json2csv.git"
   },
-  "author": "Juanjo Díaz",
+  "author": {
+    "name": "Juanjo Díaz",
+    "email": "juanjo.diazmo@gmail.com"
+  },
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/juanjoDiaz/json2csv/issues"
   },
-  "homepage": "https://github.com/juanjoDiaz/json2csv#readme"
+  "homepage": "http://juanjodiaz.github.io/json2csv",
 }
