--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "json2csv",
   "version": "6.0.0",
+  "private": true,
   "description": "Fast and highly configurable JSON to CSV converter",
   "keywords": [
     "json",
@@ -10,17 +11,29 @@
     "convert",
     "parse"
   ],
-  "author": {
-    "name": "Juanjo Díaz",
-    "email": "juanjo.diazmo@gmail.com"
+  "homepage": "http://juanjodiaz.github.io/json2csv",
+  "bugs": {
+    "url": "https://github.com/juanjoDiaz/json2csv/issues"
   },
-  "license": "MIT",
-  "private": true,
   "repository": {
     "type": "git",
     "url": "https://github.com/juanjodiaz/json2csv"
   },
-  "homepage": "http://juanjodiaz.github.io/json2csv",
+  "license": "MIT",
+  "author": {
+    "name": "Juanjo Díaz",
+    "email": "juanjo.diazmo@gmail.com"
+  },
+  "workspaces": [
+    "packages/cli",
+    "packages/formatters",
+    "packages/node",
+    "packages/parsers",
+    "packages/test-helpers",
+    "packages/transforms",
+    "packages/whatwg",
+    "packages/test-performance"
+  ],
   "scripts": {
     "docs:prebuild": "esbuild docs/docs-export.js --bundle --outfile=docs/json2csv.js",
     "docs:preview": "docsify serve docs",
@@ -50,15 +63,5 @@
   },
   "volta": {
     "node": "14.17.0"
-  },
-  "workspaces": [
-    "packages/cli",
-    "packages/formatters",
-    "packages/node",
-    "packages/parsers",
-    "packages/test-helpers",
-    "packages/transforms",
-    "packages/whatwg",
-    "packages/test-performance"
-  ]
+  }
 }
