--- a/packages/plainjs/package.json
+++ b/packages/plainjs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@json2csv/parsers",
+  "name": "@json2csv/plainjs",
   "version": "6.0.0",
   "description": "Pure Javascript JSON to CSV converter.",
   "keywords": [
