--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@json2csv/cli",
-  "version": "6.0.0",
+  "version": "6.0.0-alpha.2",
   "description": "Command Line Interface to convert JSON to CSV.",
   "keywords": [
     "json",
