--- a/packages/formatters/package.json
+++ b/packages/formatters/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@json2csv/formatters",
-  "version": "6.0.0",
+  "version": "6.0.0-alpha.2",
   "description": "json2csv built-in formatters. A formatter is a function that receives the raw js value of a given type and formats it as a valid CSV cell.",
   "keywords": [
     "json",
