--- a/packages/plainjs/package.json
+++ b/packages/plainjs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@json2csv/plainjs",
-  "version": "6.0.0",
+  "version": "6.0.0-alpha.2",
   "description": "Pure Javascript JSON to CSV converter.",
   "keywords": [
     "json",
