--- a/packages/formatters/package.json
+++ b/packages/formatters/package.json
@@ -25,7 +25,7 @@
   },
   "type": "module",
   "exports": {
-    "./*": "./src/*.js",
+    "./*": "./src/*",
     ".": "./src/index.js"
   },
   "main": "src/index.js",
