fix: add inter-package dependencies explicitely

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -34,6 +34,7 @@
     "test:raw": "node test"
   },
   "dependencies": {
+    "@json2csv/node": "^6.0.0-alpha.3",
     "commander": "^9.3.0"
   }
 }
