--- a/packages/plainjs/package.json
+++ b/packages/plainjs/package.json
@@ -36,6 +36,7 @@
     "test:raw": "node test"
   },
   "dependencies": {
+    "@json2csv/formatters": "^6.0.0-alpha.3",
     "@streamparser/json": "^0.0.8",
     "lodash.get": "^4.4.2"
   }
