--- a/packages/whatwg/package.json
+++ b/packages/whatwg/package.json
@@ -34,5 +34,8 @@
     "test": "npm run test:raw | tap-spec",
     "test-with-coverage": "c8 --reporter=text npm test",
     "test:raw": "node test"
+  },
+  "dependencies": {
+    "@json2csv/plainjs": "^6.0.0-alpha.3"
   }
 }
