--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "json2csv",
-  "version": "6.0.0-alpha.3",
+  "version": "6.0.0-alpha.4",
   "private": true,
   "description": "Fast and highly configurable JSON to CSV converter",
   "keywords": [
@@ -41,7 +41,8 @@
     "lint": "npm run lint -ws",
     "lint:fix": "npm run lint -- --fix",
     "test": "npm run test:raw -w @json2csv/cli -w @json2csv/plainjs -w @json2csv/node -w @json2csv/whatwg | tap-spec",
-    "test-with-coverage": "c8 --include 'packages/*/src' --include 'packages/*/bin' --reporter=text --reporter=lcov npm test"
+    "test-with-coverage": "c8 --include 'packages/*/src' --include 'packages/*/bin' --reporter=text --reporter=lcov npm test",
+    "deprendencies:update-internal": "npm run deprendencies:update-internal -w @json2csv/cli -w @json2csv/plainjs -w @json2csv/node -w @json2csv/whatwg"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.18.2",
