--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "json2csv",
-  "version": "6.0.0-alpha.4",
+  "version": "6.0.0",
   "private": true,
   "description": "Fast and highly configurable JSON to CSV converter",
   "keywords": [
