--- a/packages/plainjs/package.json
+++ b/packages/plainjs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@json2csv/plainjs",
-  "version": "6.0.0-alpha.4",
+  "version": "6.0.0",
   "description": "Pure Javascript JSON to CSV converter.",
   "keywords": [
     "json",
@@ -37,7 +37,7 @@
     "deprendencies:update-internal": "npm uninstall @json2csv/formatters && npm install @json2csv/formatters"
   },
   "dependencies": {
-    "@json2csv/formatters": "^6.0.0-alpha.4",
+    "@json2csv/formatters": "^6.0.0",
     "@streamparser/json": "^0.0.9",
     "lodash.get": "^4.4.2"
   }
