fix: add cjs built files during prepublish

--- a/packages/formatters/package.json
+++ b/packages/formatters/package.json
@@ -38,6 +38,7 @@
   "scripts": {
     "lint": "eslint src",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node ../../build-cjs.js formatters"
+    "build:cjs": "node ../../build-cjs.js formatters",
+    "prepublishOnly": "npm run build:cjs"
   }
 }
