--- a/packages/whatwg/package.json
+++ b/packages/whatwg/package.json
@@ -40,8 +40,9 @@
     "test": "npm run test:raw | tap-spec",
     "test-with-coverage": "c8 --reporter=text npm test",
     "test:raw": "node test",
-    "build": "node ../../build-cjs.js whatwg",
-    "deprendencies:update-internal": "npm uninstall @json2csv/plainjs && npm install @json2csv/plainjs"
+    "deprendencies:update-internal": "npm uninstall @json2csv/plainjs && npm install @json2csv/plainjs",
+    "build:cjs": "node ../../build-cjs.js whatwg",
+    "prepublishOnly": "npm run build:cjs"
   },
   "dependencies": {
     "@json2csv/plainjs": "^6.1.1"
