--- a/packages/plainjs/package.json
+++ b/packages/plainjs/package.json
@@ -40,8 +40,9 @@
     "test": "npm run test:raw | tap-spec",
     "test-with-coverage": "c8 --reporter=text npm test",
     "test:raw": "node test",
-    "build": "node ../../build-cjs.js plainjs",
-    "deprendencies:update-internal": "npm uninstall @json2csv/formatters && npm install @json2csv/formatters"
+    "deprendencies:update-internal": "npm uninstall @json2csv/formatters && npm install @json2csv/formatters",
+    "build:cjs": "node ../../build-cjs.js plainjs",
+    "prepublishOnly": "npm run build:cjs"
   },
   "dependencies": {
     "@json2csv/formatters": "^6.1.1",
