--- a/packages/transforms/package.json
+++ b/packages/transforms/package.json
@@ -38,7 +38,8 @@
   "scripts": {
     "lint": "eslint src",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node ../../build-cjs.js transforms"
+    "build:cjs": "node ../../build-cjs.js transforms",
+    "prepublishOnly": "npm run build:cjs"
   },
   "dependencies": {
     "lodash.get": "^4.4.2"
