--- a/packages/plainjs/package.json
+++ b/packages/plainjs/package.json
@@ -25,13 +25,6 @@
   },
   "type": "module",
   "types": "./dist/types/index.d.ts",
-  "typesVersions": {
-    "*": {
-      "*": [
-        "src/*"
-      ]
-    }
-  },
   "exports": {
     "./*": {
       "import": "./dist/mjs/*",
@@ -41,10 +34,10 @@
     ".": {
       "import": "./dist/mjs/index.js",
       "require": "./dist/cjs/index.js",
-      "types": "./dist/types/index.d.js"
+      "types": "./dist/types/index.d.ts"
     }
   },
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "scripts": {
     "lint": "eslint src test",
     "build:cjs": "tsc --module commonjs --outDir ./dist/cjs && node ../../build-cjs.js",
