--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -32,7 +32,7 @@
     "test": "npm run test:raw | tap-spec",
     "test-with-coverage": "c8 --reporter=text npm test",
     "test:raw": "node test",
-    "deprendencies:update-internal": "npm uninstall @json2csv/node @json2csv/transforms && npm install @json2csv/node @json2csv/transforms"
+    "dependencies:update-internal": "npm uninstall @json2csv/node @json2csv/transforms && npm install @json2csv/node @json2csv/transforms"
   },
   "dependencies": {
     "@json2csv/node": "^6.1.2",
