--- a/packages/plainjs/package.json
+++ b/packages/plainjs/package.json
@@ -40,7 +40,7 @@
     "test": "npm run test:raw | tap-spec",
     "test-with-coverage": "c8 --reporter=text npm test",
     "test:raw": "node test",
-    "deprendencies:update-internal": "npm uninstall @json2csv/formatters && npm install @json2csv/formatters",
+    "dependencies:update-internal": "npm uninstall @json2csv/formatters && npm install @json2csv/formatters",
     "build:cjs": "node ../../build-cjs.js plainjs",
     "prepublishOnly": "npm run build:cjs"
   },
