--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -24,17 +24,14 @@
     "email": "juanjo.diazmo@gmail.com"
   },
   "type": "module",
-  "types": "./dist/types/index.d.ts",
   "exports": {
     "./*": {
       "import": "./dist/mjs/*",
-      "require": "./dist/cjs/*",
-      "types": "./dist/types/*"
+      "require": "./dist/cjs/*"
     },
     ".": {
       "import": "./dist/mjs/index.js",
-      "require": "./dist/cjs/index.js",
-      "types": "./dist/types/index.d.ts"
+      "require": "./dist/cjs/index.js"
     }
   },
   "main": "src/index.js",
@@ -54,6 +51,6 @@
     "@json2csv/plainjs": "^6.1.3"
   },
   "devDependencies": {
-    "@types/node": "^18.11.9"
+    "@types/node": "^20.1.7"
   }
 }
