--- a/packages/plainjs/package.json
+++ b/packages/plainjs/package.json
@@ -24,17 +24,14 @@
     "email": "juanjo.diazmo@gmail.com"
   },
   "type": "module",
-  "types": "./dist/types/index.d.ts",
   "exports": {
     "./*": {
       "import": "./dist/mjs/*",
-      "require": "./dist/cjs/*",
-      "types": "./dist/types/*"
+      "require": "./dist/cjs/*"
     },
     ".": {
       "import": "./dist/mjs/index.js",
-      "require": "./dist/cjs/index.js",
-      "types": "./dist/types/index.d.ts"
+      "require": "./dist/cjs/index.js"
     }
   },
   "main": "src/index.ts",
@@ -52,7 +49,7 @@
   },
   "dependencies": {
     "@json2csv/formatters": "^6.1.3",
-    "@streamparser/json": "^0.0.12",
+    "@streamparser/json": "^0.0.14",
     "lodash.get": "^4.4.2"
   }
 }
