--- a/packages/plainjs/package.json
+++ b/packages/plainjs/package.json
@@ -37,7 +37,7 @@
   "main": "src/index.ts",
   "scripts": {
     "lint": "eslint src test",
-    "build:cjs": "tsc --module commonjs --outDir ./dist/cjs && node ../../build-cjs.js",
+    "build:cjs": "tsc --module commonjs --verbatimModuleSyntax false --outDir ./dist/cjs && node ../../build-cjs.js",
     "build:mjs": "tsc --module esnext --outDir ./dist/mjs",
     "build": "npm run build:cjs && npm run build:mjs",
     "pretest": "npm run build",
