refactor: move tests to typescript

--- a/packages/plainjs/tsconfig.json
+++ b/packages/plainjs/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "extends": "../../tsconfig.json",
+  "ts-node": {
+      // Tell ts-node CLI to install the --loader automatically
+      "esm": true
+  },
   "include": [
     "src/**/*.ts"
   ],
