--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "devDependencies": {
     "@types/lodash.get": "^4.4.7",
+    "@types/tape": "^4.13.2",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
     "c8": "^7.11.3",
@@ -63,6 +64,7 @@
     "tap-spec": "^5.0.0",
     "tape": "^5.2.2",
     "tiny-glob": "^0.2.9",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   },
   "engines": {
