--- a/packages/whatwg/package.json
+++ b/packages/whatwg/package.json
@@ -34,7 +34,7 @@
       "require": "./dist/cjs/index.js"
     }
   },
-  "main": "src/index.js",
+  "main": "dist/mjs/index.js",
   "scripts": {
     "lint": "eslint src test",
     "build:cjs": "tsc --module commonjs --verbatimModuleSyntax false --outDir ./dist/cjs && node ../../build-cjs.js",
@@ -43,7 +43,7 @@
     "pretest": "npm run build",
     "test": "node test/CommonJS.cjs && npm run test:raw | tap-spec",
     "test-with-coverage": "c8 --reporter=text npm test",
-    "test:raw": "node test",
+    "test:raw": "ts-node --esm test/index.ts",
     "dependencies:update-internal": "npm uninstall @json2csv/plainjs && npm install @json2csv/plainjs",
     "prepublishOnly": "npm run build"
   },
