--- a/.github/workflows/on-release.yaml
+++ b/.github/workflows/on-release.yaml
@@ -10,12 +10,12 @@ jobs:
     strategy:
       matrix:
         package:
-          - '@json2csv/cli'
           - '@json2csv/formatters'
-          - '@json2csv/node'
-          - '@json2csv/plainjs'
           - '@json2csv/transforms'
+          - '@json2csv/plainjs'
           - '@json2csv/whatwg'
+          - '@json2csv/node'
+          - '@json2csv/cli'
 
     steps:
       - uses: actions/checkout@v3
@@ -26,6 +26,7 @@ jobs:
           # Needs to be explicitly specified for auth to work
           registry-url: 'https://registry.npmjs.org'
       - run: npm ci
+      - run: npm run build
       - run: npm publish --access public -w ${{ matrix.package }}
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
