--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "test": "npm run test:raw -w @json2csv/plainjs -w @json2csv/node -w @json2csv/whatwg -w @json2csv/cli | tap-spec",
     "test-with-coverage": "c8 --include 'packages/*/src' --include 'packages/*/bin' --reporter=text --reporter=lcov npm test",
     "build:cdn": "node build-cdn.js",
-    "build": "npm run build -ws -w @json2csv/formatters -w @json2csv/transforms -w @json2csv/plainjs -w @json2csv/node -w @json2csv/whatwg -w @json2csv/cli",
+    "build": "npm run build -w @json2csv/formatters -w @json2csv/transforms -w @json2csv/plainjs -w @json2csv/node -w @json2csv/whatwg -w @json2csv/cli",
     "dependencies:update-internal": "npm run dependencies:update-internal -w @json2csv/cli -w @json2csv/plainjs -w @json2csv/node -w @json2csv/whatwg"
   },
   "devDependencies": {
