--- a/packages/formatters/package.json
+++ b/packages/formatters/package.json
@@ -35,6 +35,9 @@
     }
   },
   "main": "dist/mjs/index.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "lint": "eslint src",
     "build:cjs": "tsc --module commonjs --verbatimModuleSyntax false --outDir ./dist/cjs && node ../../build-cjs.js",
