--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "test-with-coverage": "c8 --include 'packages/*/src' --include 'packages/*/bin' --reporter=text --reporter=lcov npm test",
     "build:cdn": "node build-cdn.js",
     "build": "npm run build -w @json2csv/formatters -w @json2csv/transforms -w @json2csv/plainjs -w @json2csv/node -w @json2csv/whatwg -w @json2csv/cli",
-    "dependencies:update-internal": "npm run dependencies:update-internal -w @json2csv/cli -w @json2csv/plainjs -w @json2csv/node -w @json2csv/whatwg"
+    "dependencies:update-internal": "npm run dependencies:update-internal -w @json2csv/cli -w @json2csv/plainjs -w @json2csv/node -w @json2csv/whatwg",
+    "changelog:update": "conventional-changelog-cli -p conventionalcommits -i CHANGELOG.md -s"
   },
   "devDependencies": {
     "@types/lodash.get": "^4.4.7",
@@ -53,6 +54,7 @@
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
     "c8": "^7.11.3",
+    "conventional-changelog-cli": "^3.0.0",
     "docsify-cli": "^4.4.4",
     "esbuild": "^0.19.2",
     "eslint": "^8.30.0",
