--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "tape": "^5.2.2",
     "tiny-glob": "^0.2.9",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "typescript": "~5.1.0"
   },
   "engines": {
     "node": ">=14.17.0",
