chore: fix ts-node loader for newer node versions

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -32,7 +32,7 @@
     "build:mjs": "tsc --module esnext --outDir ./bin",
     "build": "npm run build:mjs",
     "pretest": "npm run build",
-    "test:raw": "ts-node --esm test/index.ts",
+    "test:raw": "node --loader ts-node/esm test/index.ts",
     "test": "npm run test:raw | tap-spec",
     "test-with-coverage": "c8 --reporter=text npm test",
     "dependencies:update-internal": "npm uninstall @json2csv/formatters @json2csv/node @json2csv/transforms && npm install @json2csv/formatters @json2csv/node @json2csv/transforms",
